integrate sync stack for container registry clients